--- a/package.json
+++ b/package.json
@@ -2,15 +2,20 @@
   "name": "goit-react-hw-06-phonebook",
   "homepage": "https://WixJoker.github.io/goit-react-hw-06-phonebook/",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
+    "@reduxjs/toolkit": "^1.8.6",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "gh-pages": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.4",
     "react-scripts": "5.0.1",
+    "redux-persist": "^6.0.0",
     "somepackage": "^0.0.1",
     "web-vitals": "^2.1.4"
   },
