--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.4",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.0",
     "redux-persist": "^6.0.0",
+    "redux-selector": "^0.2.0",
     "somepackage": "^0.0.1",
     "web-vitals": "^2.1.4"
   },
